[build-system]
requires = [
    "cython",
    "cmake>=3.24.2,<3.28",
    "setuptools-rust<2",
    "patchelf>=0.17.0.0; sys_platform == 'linux'",
]
build-backend = "setuptools.build_meta"

[project]
name = "ddtrace"
version = "4.1.0rc3"
description = "Datadog APM client library"
readme = "README.md"
license = { text = "LICENSE.BSD3" }
# ddtrace has many sub-components which can break when CPython internals
# change over versions, .e.g. profiling. So we explicitly mark incompatibility
# with versions we don't support yet.
requires-python = ">=3.9,<3.15"
authors = [
    { name = "Datadog, Inc.", email = "dev@datadoghq.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "bytecode>=0.17.0,<1; python_version>='3.14.0'",
    "bytecode>=0.16.0,<1; python_version>='3.13.0'",
    "bytecode>=0.15.1,<1; python_version~='3.12.0'",
    "bytecode>=0.14.0,<1; python_version~='3.11.0'",
    "bytecode>=0.13.0,<1; python_version<'3.11'",
    "envier~=0.6.1",
    "opentelemetry-api>=1,<2",
    "wrapt>=1,<3",
]

[project.optional-dependencies]
opentracing = [
    "opentracing>=2,<3",
]
opentelemetry = [
    "opentelemetry-exporter-otlp>=1,<2",
]

[project.scripts]
ddtrace-run = "ddtrace.commands.ddtrace_run:main"
_dd_crashtracker_receiver = "ddtrace.commands._dd_crashtracker_receiver:main"

[project.entry-points.opentelemetry_context]
ddcontextvars_context = "ddtrace.internal.opentelemetry.context:DDRuntimeContext"

[project.entry-points.pytest11]
ddtrace = "ddtrace.testing.internal.pytest.entry_point"

[project.entry-points.'ddtrace.products']
"apm-tracing-rc" = "ddtrace.internal.remoteconfig.products.apm_tracing"
"code-origin-for-spans" = "ddtrace.debugging._products.code_origin.span"
"dynamic-instrumentation" = "ddtrace.debugging._products.dynamic_instrumentation"
"exception-replay" = "ddtrace.debugging._products.exception_replay"
"live-debugger" = "ddtrace.debugging._products.live_debugger"
"error-tracking" = "ddtrace.errortracking.product"
"remote-configuration" = "ddtrace.internal.remoteconfig.products.client"
"symbol-database" = "ddtrace.internal.symbol_db.product"
"appsec" = "ddtrace.internal.appsec.product"
"iast" = "ddtrace.internal.iast.product"
"tracer" = "ddtrace._trace.product"

[project.urls]
"Bug Tracker" = "https://github.com/DataDog/dd-trace-py/issues"
Changelog = "https://github.com/DataDog/dd-trace-py/releases"
Documentation = "https://ddtrace.readthedocs.io/en/stable/"
Homepage = "https://github.com/DataDog/dd-trace-py"
"Source Code" = "https://github.com/DataDog/dd-trace-py/"

[tool.cython-lint]
max-line-length = 120
exclude = '''
(
  \.worktrees/
  | .venv*
  | \.sg
  | \.riot
  | ddtrace/profiling/
  | test_ci_visibility_api_client_skippable_real_world_responses\.py
)
'''

[tool.pyright]
exclude = [
  "**/__pycache__",
  ".git",
  ".ddriot",
  ".ddtox",
  ".riot",
  ".sg",
  ".tox",
  ".venv",
  ".worktrees",
]

[tool.bandit]
targets = ["ddtrace/"]

# TODO: Remove excludes
exclude_dirs = [
  "ddtrace/vendor/",
  "ddtrace/appsec/_iast/_taint_tracking/_vendor/",
  "ddtrace/commands/ddtrace_run.py",
  "ddtrace/ext/git.py",
  "ddtrace/ext/test.py",
  "ddtrace/internal/datadog/profiling/ddup/test/interface.py",
  "ddtrace/internal/module.py",
  "ddtrace/internal/processor/stats.py",
  "ddtrace/internal/rate_limiter.py",
  "ddtrace/internal/uwsgi.py",
  "ddtrace/sourcecode/_utils.py",
]

[tool.ruff]
# This exclude list applies to both linting and formatting
exclude = [
    ".riot",
    ".ddriot",
    ".venv*",
    ".git",
    ".worktrees",
    "__pycache__",
    ".eggs",
    "*.egg",
    ".sg",
    "build",
    "ddtrace/__init__.py",
    "ddtrace/vendor/*",
    "ddtrace/appsec/_iast/_taint_tracking/_vendor/*",
    "tests/profiling/collector/pprof_*pb2.py",
    "tests/contrib/grpc/hello_pb2.py",
    "tests/contrib/django_celery/app/*",
    "tests/contrib/protobuf/schemas/**/*.py",
    "tests/appsec/iast/fixtures/ast/str/non_utf8_content.py",
    "tests/appsec/iast/fixtures/aspects/str/non_utf8_content.py",
    "tests/lib-injection/dd-lib-python-init-test-protobuf-old/addressbook_pb2.py"
]
lint.ignore = [
    "A003",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D200",
    "D202",
    "D204",
    "D205",
    "D208",
    "D210",
    "D300",
    "D400",
    "D401",
    "D403",
    "D404",
    "D413",
    "E203",
    "E231",
    "E721",
    "G201",
]
line-length = 120

# Allow experimental/preview checks
lint.preview = true
lint.explicit-preview-rules = true

lint.select = [
    "A",
    "D",
    "E",
    "F",
    "G",
    "I",
    "PLW0244",  # redefined-slots-in-subclass
    "W",
]
lint.unfixable =[
  "F401",
]


[tool.ruff.format]
# Formatter-specific settings
# The exclude list from [tool.ruff] is inherited automatically
# Additional formatter options can be added here if needed
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.isort]
force-single-line = true
lines-after-imports = 2
force-sort-within-sections = true
known-first-party = [ "ddtrace" ]
relative-imports-order = "furthest-to-closest"
