[build-system]
requires = [
    "scikit-build-core>=0.10",
    "cython",
    "ninja",
    "patchelf>=0.17.0.0; sys_platform == 'linux'",
]
build-backend = "build_backend"
backend-path = ["."]

[tool.scikit-build]
# Pin the build directory to a stable, version-tagged path so successive
# `pip install -e .` calls reuse the same cmake binary tree (incremental builds).
build-dir = "build/cmake-{wheel_tag}"
# AIDEV-NOTE: Do NOT set cmake.version here; scikit-build-core selects cmake.
#
# Incremental-build design (--no-build-isolation):
# Use `pip install --no-build-isolation -e .` for normal development rebuilds.
# build_backend.py creates/reuses build/build-env-{wheel_tag}/ with cmake,
# ninja, scikit-build-core, and cython at STABLE paths before delegating to
# scikit_build_core.  pip is then run with --no-build-isolation so those same
# stable-path tools are used; Ninja rule hashes never change between builds.
# Result: ~7s steady-state incremental builds (vs ~30s with pip isolation).
# `scripts/build/timed_build.py` is a debug-only wrapper that additionally
# parses the Ninja log to produce a per-category timing summary; use it only
# when diagnosing build performance, not as a substitute for pip directly.
#
# Two additional optimisations keep incremental builds fast:
#   1. Abseil: pre-installed to build/<tag>/absl-install/ after the first
#      full build; subsequent configures use find_package(absl) instead of
#      FetchContent, eliminating Abseil subproject re-configure.
#   2. dedup_headers fingerprint: cmake/RunDedupHeaders.cmake skips header
#      post-processing when lib_native.dylib hasn't changed, preventing
#      timestamp updates that would otherwise trigger C++ recompilation.
build.verbose = true
# AIDEV-NOTE: redirect editable mode (the scikit-build-core default) creates a
# custom finder that runs cmake --install into the venv's site-packages.  This
# is fine for the base venv, but riot's test venvs find ddtrace via pytest's
# conftest.py mechanism (source tree on sys.path), not through an editable
# install.  To support this, build_backend.py's build_editable wrapper runs a
# second cmake --install with the source tree as prefix after the normal
# editable install, placing .so files in the source tree alongside .py files.
# This mirrors the old setup.py build_ext --inplace behaviour.
# Defaults can be overridden via env vars mapped to cmake defines below.
cmake.build-type = "RelWithDebInfo"
wheel.packages = ["ddtrace"]

# ── cibuildwheel ──────────────────────────────────────────────────────────────
# When building macOS wheels on an arm64 host for x86_64 (cross-compilation),
# Corrosion/Cargo needs the x86_64-apple-darwin Rust target installed.  This
# before-all step is idempotent and runs on every macOS cibuildwheel invocation
# (both native and cross-compiled), ensuring the target is always present.
# aarch64-apple-darwin is included so that arm64 targets also work cleanly when
# running cibuildwheel for arm64 on an x86_64 host.
[tool.cibuildwheel.macos]
before-all = "rustup target add x86_64-apple-darwin aarch64-apple-darwin || true"

[tool.scikit-build.cmake.define]
DD_COMPILE_MODE     = {env = "DD_COMPILE_MODE",     default = "RelWithDebInfo"}
DD_FAST_BUILD       = {env = "DD_FAST_BUILD",       default = "OFF"}
DD_USE_SCCACHE      = {env = "DD_USE_SCCACHE",      default = "OFF"}
DD_SERVERLESS_BUILD = {env = "DD_SERVERLESS_BUILD", default = "OFF"}

[project]
name = "ddtrace"
version = "4.7.0rc4"
description = "Datadog APM client library"
readme = "README.md"
license = { text = "LICENSE.BSD3" }
# ddtrace has many sub-components which can break when CPython internals
# change over versions, .e.g. profiling. So we explicitly mark incompatibility
# with versions we don't support yet.
requires-python = ">=3.9,<3.15"
authors = [
    { name = "Datadog, Inc.", email = "dev@datadoghq.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "bytecode>=0.17.0,<1; python_version>='3.14.0'",
    "bytecode>=0.16.0,<1; python_version>='3.13.0'",
    "bytecode>=0.15.1,<1; python_version~='3.12.0'",
    "bytecode>=0.14.0,<1; python_version~='3.11.0'",
    "bytecode>=0.13.0,<1; python_version<'3.11'",
    "envier~=0.6.1",
    "opentelemetry-api>=1,<2",
    "wrapt>=1,<3",
]

[project.optional-dependencies]
opentracing = [
    "opentracing>=2,<3",
]
opentelemetry = [
    "opentelemetry-exporter-otlp>=1,<2",
]

[project.scripts]
ddtrace-run = "ddtrace.commands.ddtrace_run:main"
_dd_crashtracker_receiver = "ddtrace.commands._dd_crashtracker_receiver:main"

[project.entry-points.opentelemetry_context]
ddcontextvars_context = "ddtrace.internal.opentelemetry.context:DDRuntimeContext"

[project.entry-points.pytest11]
ddtrace = "ddtrace.testing.internal.pytest.entry_point"

[project.entry-points.'mlflow.request_header_provider']
datadog = "ddtrace.contrib.internal.mlflow.auth_plugin:DatadogHeaderProvider"

[project.entry-points.'ddtrace.products']
"apm-tracing-rc" = "ddtrace.internal.remoteconfig.products.apm_tracing"
"code-origin-for-spans" = "ddtrace.debugging._products.code_origin.span"
"dynamic-instrumentation" = "ddtrace.debugging._products.dynamic_instrumentation"
"exception-replay" = "ddtrace.debugging._products.exception_replay"
"live-debugger" = "ddtrace.debugging._products.live_debugger"
"error-tracking" = "ddtrace.errortracking.product"
"openfeature" = "ddtrace.internal.openfeature.product"
"remote-configuration" = "ddtrace.internal.remoteconfig.products.client"
"symbol-database" = "ddtrace.internal.symbol_db.product"
"appsec" = "ddtrace.internal.appsec.product"
"iast" = "ddtrace.internal.iast.product"
"tracer" = "ddtrace._trace.product"

[project.urls]
"Bug Tracker" = "https://github.com/DataDog/dd-trace-py/issues"
Changelog = "https://github.com/DataDog/dd-trace-py/releases"
Documentation = "https://ddtrace.readthedocs.io/en/stable/"
Homepage = "https://github.com/DataDog/dd-trace-py"
"Source Code" = "https://github.com/DataDog/dd-trace-py/"

[tool.cython-lint]
max-line-length = 120
exclude = '''
(
  \.worktrees/
  | .venv*
  | \.sg
  | \.riot
  | ddtrace/profiling/
  | test_ci_visibility_api_client_skippable_real_world_responses\.py
)
'''

[tool.pyright]
exclude = [
  "**/__pycache__",
  ".git",
  ".ddriot",
  ".ddtox",
  ".riot",
  ".sg",
  ".tox",
  ".venv",
  ".worktrees",
]

[tool.bandit]
targets = ["ddtrace/"]

# TODO: Remove excludes
exclude_dirs = [
  "ddtrace/vendor/",
  "ddtrace/appsec/_iast/_taint_tracking/_vendor/",
  "ddtrace/commands/ddtrace_run.py",
  "ddtrace/ext/git.py",
  "ddtrace/ext/test.py",
  "ddtrace/internal/datadog/profiling/ddup/test/interface.py",
  "ddtrace/internal/module.py",
  "ddtrace/internal/processor/stats.py",
  "ddtrace/internal/rate_limiter.py",
  "ddtrace/internal/uwsgi.py",
  "ddtrace/sourcecode/_utils.py",
]

[tool.ruff]
# This exclude list applies to both linting and formatting
exclude = [
    ".riot",
    ".ddriot",
    ".venv*",
    ".git",
    ".worktrees",
    "__pycache__",
    ".eggs",
    "*.egg",
    ".sg",
    "build",
    "ddtrace/__init__.py",
    "ddtrace/vendor/*",
    "ddtrace/appsec/_iast/_taint_tracking/_vendor/*",
    "tests/profiling/collector/pprof_*pb2.py",
    "tests/contrib/grpc/hello_pb2.py",
    "tests/contrib/django_celery/app/*",
    "tests/contrib/protobuf/schemas/**/*.py",
    "tests/coverage/included_path/py39_line_numbers.py",
    "tests/appsec/iast/fixtures/ast/str/non_utf8_content.py",
    "tests/appsec/iast/fixtures/aspects/str/non_utf8_content.py",
    "tests/lib-injection/dd-lib-python-init-test-protobuf-old/addressbook_pb2.py",
    "tests/appsec/iast/aspects/test_template_string_aspect.py",  # Python 3.14+ syntax (t-strings)
    "benchmarks/bm/iast_fixtures/template_strings.py",  # Python 3.14+ syntax (t-strings)
]
lint.ignore = [
    "A003",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D200",
    "D202",
    "D204",
    "D205",
    "D208",
    "D210",
    "D300",
    "D400",
    "D401",
    "D403",
    "D404",
    "D413",
    "E203",
    "E231",
    "E721",
    "G201",
]
line-length = 120

# Allow experimental/preview checks
lint.preview = true
lint.explicit-preview-rules = true

lint.select = [
    "A",
    "D",
    "E",
    "F",
    "G",
    "I",
    "PLW0244",  # redefined-slots-in-subclass
    "UP006",  # non-pep585-annotation (use builtin generics like list instead of typing.List)
    "W",
]
lint.unfixable =[
  "F401",
]


[tool.ruff.format]
# Formatter-specific settings
# The exclude list from [tool.ruff] is inherited automatically
# Additional formatter options can be added here if needed
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.isort]
force-single-line = true
lines-after-imports = 2
force-sort-within-sections = true
known-first-party = [ "ddtrace" ]
relative-imports-order = "furthest-to-closest"
