[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dd-otel-instrumentor"
version = "0.1.0"
description = "Datadog integrations compatible with OpenTelemetry SDK"
readme = "README.md"
license = { text = "BSD-3-Clause" }
requires-python = ">=3.9"
authors = [
    { name = "Datadog, Inc.", email = "dev@datadoghq.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
# Core dependencies - NO ddtrace dependency
dependencies = [
    "opentelemetry-api>=1,<2",
    "wrapt>=1,<3",
    "envier~=0.6.1",
]

[project.optional-dependencies]
# Integration-specific dependencies
httpx = [
    "httpx>=0.17",
]
all = [
    "httpx>=0.17",
]
# Development dependencies
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "opentelemetry-sdk>=1,<2",
]

[project.urls]
"Bug Tracker" = "https://github.com/DataDog/dd-trace-py/issues"
Homepage = "https://github.com/DataDog/dd-trace-py"
"Source Code" = "https://github.com/DataDog/dd-trace-py/"

[tool.setuptools.packages.find]
include = ["dd_otel_instrumentor*", "ddtrace*"]

[tool.ruff]
line-length = 120

